Compilers construction/Solutions/compiler-construction-xi-2/tests/pracownia2/ok/021_mutualrec.xi

f(): int {
    return g()
}


g(): int {
    return f()
}

//@PRACOWNIA
//@stop_after parser
