Compilers construction/Solutions/compiler-construction-xi-2/tests/pracownia2/error/050_function_missing_return_if_return.xi
f(x:bool):int
{
    if (x) {
        return 0
    }
}
//@PRACOWNIA
//@should_not_typecheck
